--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mad/mad-frm",
+    "name": "mader12/mad-frm",
     "description": "framework",
     "license": "GNU GPL",
     "authors": [
