--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
-            "\\Mad": "src"
+            "\\Mad\\": "src"
         }
     }
 }
