--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "mader12/mad-frm",
     "description": "framework",
-    "license": "GNU GPL",
+    "license": "MIT",
     "authors": [
         {
             "name": "Drozhzhinov",
