--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
         "extra": {
         "branch-alias": {
-            "dev": "0.1"
+            "dev": "0.1-dev"
         }
     },
     "minimum-stability": "dev",
