--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,24 @@
 {
     "name": "mader12/mad-frm",
-    "description": "framework",
+    "type": "library",
+    "description": "mad simple test framework",
+    "keywords": ["test","framework"],
+    "homepage": "https://github.com/mader12/mad-frm",
     "license": "MIT",
-    "version": "0.2",
     "authors": [
         {
-            "name": "Drozhzhinov",
-            "email": "mader12@yandex.ru"
+            "name": "MIhail Drozhzhinov",
+            "email": "j.mader12@yandex.ru",
+            "homepage": "http://arinterier.ru",
+            "role": "Developer"
         }
     ],
-    
+    "require": {
+        "php": ">=5.6"
+    },
     "autoload": {
-        "psr-4": {
-            "\\Mad\\": "src"
+        "psr-0": {
+            "Mad": "src"
         }
     }
 }
