--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "php": ">=5.6"
     },
     "autoload": {
-        "psr-0": {
-            "Mad": "src"
+        "psr-4": {
+            "Mad": "src/"
         }
     }
 }
